--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     background: #CCCCCC
 }
 
+.principal{
+    background: #CCCCCC;
+    padding: 30px;
+}
+
 #banner {
     width: 100%;
 }
@@ -20,4 +25,28 @@ p {
 
 em strong {
     color: #FF0000;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios {
+    width: 50%;
 }
